git add reame volumes and descripcion

--- a/01-introduccion/03.-manager-volumen.md
+++ b/01-introduccion/03.-manager-volumen.md
@@ -22,3 +22,102 @@ Los volúmenes son la forma recomendada de persistir datos en contenedores Docke
 - A diferencia de los **bind mounts**, los volúmenes son gestionados completamente por Docker.
 - Usar volúmenes facilita el backup, la migración y la persistencia entre múltiples contenedores.
 
+---
+
+
+# 🧪 Tutorial Práctico: Manejo de Volúmenes en Docker
+
+A continuación te muestro cómo usar volúmenes en Docker con una aplicación sencilla paso a paso.
+
+---
+
+## 1️⃣ Crear un volumen
+
+```bash
+docker volume create mi_volumen
+```
+
+> 📝 Esto crea un volumen gestionado por Docker, útil para persistir datos.
+
+---
+
+## 2️⃣ Usar el volumen en un contenedor
+
+```bash
+docker run -it --name mi_contenedor -v mi_volumen:/app ubuntu bash
+```
+
+> 🔸 Crea un contenedor Ubuntu con el volumen montado en `/app`.  
+> 🔸 La opción `-it` permite entrar en modo interactivo.
+
+---
+
+## 3️⃣ Dentro del contenedor: crear carpeta y archivo
+
+```bash
+cd /app
+mkdir datos
+echo "¡Hola volumen!" > datos/mensaje.txt
+```
+
+> 🗂️ Aquí estás creando una carpeta llamada `datos` y escribiendo un archivo dentro del volumen montado.
+
+---
+
+## 4️⃣ Salir del contenedor
+
+```bash
+exit
+```
+
+> 🚪 Esto te regresa a tu sistema host.
+
+---
+
+## 5️⃣ Verificar que los datos persisten
+
+Inicia otro contenedor usando el mismo volumen:
+
+```bash
+docker run -it --rm -v mi_volumen:/app ubuntu bash
+```
+
+Y dentro del contenedor:
+
+```bash
+cat /app/datos/mensaje.txt
+```
+
+> ✅ Verás el mensaje creado anteriormente: `¡Hola volumen!`.
+
+---
+
+## 6️⃣ Inspeccionar volumen desde el host
+
+```bash
+docker volume inspect mi_volumen
+```
+
+> 🔍 Esto te mostrará la ruta real del volumen en tu máquina.
+
+---
+
+## 7️⃣ Eliminar volumen cuando ya no lo necesites
+
+```bash
+docker volume rm mi_volumen
+```
+
+> ⚠️ Asegúrate de que ningún contenedor esté usando el volumen antes de eliminarlo.
+
+---
+
+## ✅ Conclusión
+
+Este flujo básico te muestra cómo:
+- Crear un volumen.
+- Montarlo en un contenedor.
+- Escribir y leer datos.
+- Verificar persistencia entre contenedores.
+
+¡Ideal para bases de datos, logs, configuraciones y más!
